Compile with --release instead of -source/-target
sun.misc.Signal (SignalHelper) and com.sun.nio.file.SensitivityWatchEventModifier
(WatchServiceCacheFactory) were used directly, which requires -source/-target:
internal APIs are not reachable when compiling with --release. Access both
reflectively and enable maven.compiler.release so javac checks the code against
the Java 8 API image instead of the build JDK's bootclasspath. This also removes
the 'source/target value 8 is obsolete' and 'bootstrap class path not set'
warnings and makes the Java 9+ API usage in mvnd-common tests visible (and
fixes it).

This reverts the maven.compiler.release undefining introduced when upgrading
to maven-parent 47.