@@ -22,6 +22,7 @@ import java.io.ByteArrayOutputStream;
 import java.io.File;
 import java.io.IOException;
 import java.io.PrintStream;
+import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.util.Arrays;
@@ -33,6 +34,7 @@ import java.util.Random;
 import java.util.Set;
 import java.util.UUID;
 import java.util.concurrent.CompletableFuture;
+import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 
 import org.junit.jupiter.api.AfterEach;
@@ -161,7 +163,7 @@ public class DaemonRegistryTest {
             reg1.storeStopEvent(new DaemonStopEvent(
                     "11111", System.currentTimeMillis(), DaemonExpirationStatus.QUIET_EXPIRE, "because"));
             assertEquals(1, reg1.doGetDaemonStopEvents().size());
-            Files.writeString(temp, "Foobar");
+            Files.write(temp, "Foobar".getBytes(StandardCharsets.UTF_8));
             // check if registry is reset
             assertEquals(0, reg1.getAll().size());
             assertEquals(0, reg1.doGetDaemonStopEvents().size());
@@ -194,7 +196,7 @@ public class DaemonRegistryTest {
                                         System.currentTimeMillis()));
                             }
                         }))
-                        .toList()
+                        .collect(Collectors.toList())
                         .toArray(new CompletableFuture[0]))
                 .get();
 
@@ -215,7 +217,7 @@ public class DaemonRegistryTest {
                                 reg.remove(info.getId());
                             }
                         }))
-                        .toList()
+                        .collect(Collectors.toList())
                         .toArray(new CompletableFuture[0]))
                 .get();
 
@@ -234,20 +236,26 @@ public class DaemonRegistryTest {
         CompletableFuture.allOf(IntStream.range(0, nbDaemons)
                         .mapToObj(i -> {
                             try {
-                                return new ProcessBuilder(
-                                                "java",
-                                                "-cp",
-                                                System.getProperty("java.class.path"),
-                                                "org.mvndaemon.mvnd.common.RegistryMutator",
-                                                "add",
-                                                temp.toString())
-                                        .start()
-                                        .onExit();
+                                return CompletableFuture.runAsync(() -> {
+                                    try {
+                                        new ProcessBuilder(
+                                                        "java",
+                                                        "-cp",
+                                                        System.getProperty("java.class.path"),
+                                                        "org.mvndaemon.mvnd.common.RegistryMutator",
+                                                        "add",
+                                                        temp.toString())
+                                                .start()
+                                                .waitFor();
+                                    } catch (Exception e) {
+                                        throw new RuntimeException(e);
+                                    }
+                                });
                             } catch (Exception e) {
                                 throw new RuntimeException(e);
                             }
                         })
-                        .toList()
+                        .collect(Collectors.toList())
                         .toArray(new CompletableFuture[0]))
                 .get();
 
@@ -265,21 +273,27 @@ public class DaemonRegistryTest {
         CompletableFuture.allOf(toRemove.stream()
                         .map(info -> {
                             try {
-                                return new ProcessBuilder(
-                                                "java",
-                                                "-cp",
-                                                System.getProperty("java.class.path"),
-                                                "org.mvndaemon.mvnd.common.RegistryMutator",
-                                                "remove",
-                                                temp.toString(),
-                                                info.getId())
-                                        .start()
-                                        .onExit();
+                                return CompletableFuture.runAsync(() -> {
+                                    try {
+                                        new ProcessBuilder(
+                                                        "java",
+                                                        "-cp",
+                                                        System.getProperty("java.class.path"),
+                                                        "org.mvndaemon.mvnd.common.RegistryMutator",
+                                                        "remove",
+                                                        temp.toString(),
+                                                        info.getId())
+                                                .start()
+                                                .waitFor();
+                                    } catch (Exception e) {
+                                        throw new RuntimeException(e);
+                                    }
+                                });
                             } catch (Exception e) {
                                 throw new RuntimeException(e);
                             }
                         })
-                        .toList()
+                        .collect(Collectors.toList())
                         .toArray(new CompletableFuture[0]))
                 .get();
 
